# utag

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.c3a4471.22  README.md
app/: CMakeLists.txt  main.cpp
app/src/: Application.cpp  Application.h  CMakeLists.txt  Dialog.cpp  Dialog.h  FileTag.cpp  FileTag.cpp.autosave  FileTag.h  ImageFile.cpp  ImageFile.h  MainTable.cpp  MainTable.h  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave
